--- a/style.css
+++ b/style.css
@@ -63,8 +63,12 @@ header{
 	font-size: 42px;
 	color:#010101;
 }
+.icon li:hover{
+	transform: scale(1.2);
+	transition: .4s;
+}
 .icon li{
-	margin-right: 20px !important;
+	margin-right: 17px !important;
 }
 .slider_img{}
 .slider_img{}
@@ -96,9 +100,8 @@ header{
 	color:#010101;
 }
 .f_icon:hover{
-	transform: rotate(90deg);
-	transition: .3s;
-	text-shadow: 2px 2px 10px black;
+	transform: scale(1.1);
+	transition: .4s;
 }
 .f_text{
 	margin-top: 10px;
@@ -155,16 +158,16 @@ header{
 
 .social{}
 .social ul li a{
-	background-color:  #fcdb00;
-	color:#010101;
+	/*background-color:  #fcdb00;*/
+	color:black;
 	font-size: 35px;
 	padding:0 10px;
 	border-radius: 5px;
 	margin-right: 20px;
 }
-.social ul li a:hover{
+.social ul li:hover{
 	transform: scale(1.2);
-	color:blue;
+	transition: .5s;
 }
 /*contact end*/
 /*footer start*/
@@ -175,8 +178,12 @@ header{
 	font-size: 16px;
 	padding-bottom: 100px;
 }
-.footer p:hover{
-	color :yellow;
-	cursor: pointer;
+.c_footer{
+	text-align: center;
+	margin-top: 20px;
+}
+.c_footer a{
+	color:white;
+	display: block;
 }
 /*footer end*/
