--- a/media.css
+++ b/media.css
@@ -16,6 +16,9 @@
 	.slider_text h1{
 		font-size: 25px;
 	}
+	.c_footer{
+	margin-top: 20px;
+}
 	.slider_text h2{
 		font-size: 18px;
 		margin:10px 0;
@@ -127,6 +130,7 @@
 	word-spacing: 0px;
 	letter-spacing: 0px;
 }
+
 .m_t_60{
 	margin-top:20px;
 }
@@ -140,7 +144,9 @@
 	padding-bottom: 70px;
 }
 /*contact end*/
+.f_t{
  }
+}
 
 
 /*Medium devices (tablets, 768px and up)*/
